--- a/data/mqttSettings.html
+++ b/data/mqttSettings.html
@@ -9,20 +9,20 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/station.css">
 
-    <title>Weather Station</title>
+    <title>Weather Station | MQTT Settings</title>
 </head>
 
 <body>
     %NAVBAR%
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Settings for MQTT reporting</h3>
+        <h3>Settings for MQTT</h3>
         
         <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
-                        <th>MQTT</th>
+                        <th>MQTT Broker and topics</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,6 +44,10 @@
                                     <input type="number" class="form-control" id="mqttPort" value="%MQTTPORT%" placeholder="Port number" name="mqttPort">
                                 </div>
                                 <div class="form-group">
+                                    <label for="mqttClientId">Client ID: (leave blank for default)</label>
+                                    <input type="text" class="form-control" id="mqttClientId" value="%MQTTCLIENTID%" placeholder="Client Id" maxlength="64" name="mqttClientId">
+                                </div>
+                                <div class="form-group">
                                     <label for="mqttUsername">User name:</label>
                                     <input type="text" class="form-control" id="mqttUsername" value="%MQTTUSERNAME%" placeholder="User name" maxlength="64" name="mqttUsername">
                                 </div>
@@ -52,9 +56,16 @@
                                     <input type="password" class="form-control" id="mqttPassword" value="%MQTTPASSWORD%" placeholder="Password" maxlength="64" name="mqttPassword">
                                 </div>
                                 <div class="form-group">
-                                    <label for="mqttTopic">Topic root: Topic will be "root/sensors"</label>
-                                    <input type="text" class="form-control" id="mqttTopic" value="%MQTTTOPIC%" placeholder="Topic"
-                                        name="mqttTopic">
+                                    <label for="mqttTempTopic">Temperature topic:</label>
+                                    <input type="text" class="form-control" id="mqttTempTopic" value="%MQTTTEMPTOPIC%" placeholder="Temperature topic" name="mqttTempTopic">
+                                </div>
+                                <div class="form-group">
+                                    <label for="mqttHumidityTopic">Humidity topic:</label>
+                                    <input type="text" class="form-control" id="mqttHumidityTopic" value="%MQTTHUMIDITYTOPIC%" placeholder="Humidity topic" name="mqttHumidityTopic">
+                                </div>
+                                <div class="form-group">
+                                    <label for="mqttPressureTopic">Pressure topic:</label>
+                                    <input type="text" class="form-control" id="mqttPressureTopic" value="%MQTTPRESSURETOPIC%" placeholder="Pressure topic" name="mqttPressureTopic">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
